# pw

./: .gitignore  Dockerfile  Procfile  README.md  justfile  projects.py  pyproject.toml  tailwind.config.js
.github/workflows/: Build.yml
data/: projects.json
site/: app.py  output.json
site/content/: index.md  projects.md
site/content/blog/: machine_learning_fammimmo.md  media_caprover_nginx.md
site/data/: projects.json
site/templates/: base.html  home.html
static_site/: index.html  rss.xml  sitemap.xml
static_site/blog/: index.html
static_site/blog/a-comprehensive-guide-to-multi-timezone-support-in-django/: index.html
static_site/blog/bootstraping-a-production-ready-django-project/: index.html
static_site/blog/easy-database-and-migrations-reset-during-development/: index.html
static_site/blog/exploring_sse_and_postgresql_for_realtime_communication_in_django/: index.html
static_site/blog/fullstack_developer_kodesio/: index.html
static_site/blog/fuzzy_couscous_the_cli_for_a_better_django_development_experience/: index.html
static_site/blog/head_of_development_bft_group/: index.html
static_site/blog/machine_learning_fammimmo/: index.html
static_site/blog/maximizing-productivity-pycharm-and-htmx-integration/: index.html
static_site/blog/media_setup_for_caprover_nginx_and_django/: index.html
static_site/blog/the_art_of_skimming_through_documentation/: index.html
static_site/colophon/: index.html
static_site/projects/: index.html
static_site/static/: app.py  output.json
static_site/static/css/: output.css
(+13 files in other folders)
